<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <TextView
        android:id="@+id/text_literary"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="12dp"
        android:paddingTop="15dp"
        android:text="@string/literary"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/edit_context"
        app:layout_constraintEnd_toStartOf="@+id/img_rubbish"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry,TextContrastCheck" />

    <ImageView
        android:id="@+id/img_save"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/save" />

    <ImageView
        android:id="@+id/img_counter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintEnd_toStartOf="@+id/img_save"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/counter" />

    <ImageView
        android:id="@+id/img_rubbish"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/todo1"
        app:layout_constraintEnd_toStartOf="@+id/img_counter"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rubbish" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@color/grey9"
        app:layout_constraintBottom_toTopOf="@+id/edit_context"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_rubbish" />

    <EditText
        android:id="@+id/edit_context"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:background="@null"
        android:ems="10"
        android:gravity="start|left"
        android:hint="@string/tishi"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_counter"
        tools:ignore="LabelFor,RtlHardcoded,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>